# swagger-output.json
@@ -57,9 +57,6 @@
         ],
         "description": "Route for login user",
         "responses": {
-          "200": {
-            "description": "OK"
-          },
           "400": {
             "description": "Bad Request"
           }
@@ -76,7 +73,7 @@
         }
       }
     },
-    "/api/refresh-token": {
+    "/api/auth/refresh-token": {
       "post": {
         "tags": [
           "Auth"
